--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
     
     <header class="header animate__animated animate__fadeIn">
         <div class="logo-container">
-            <img src="school-logo.png" alt="The Climax Model Schools Logo" class="logo">
+            <img src="school-logo.jpg" alt="The Climax Model Schools Logo" class="logo">
             <h1>The Climax Model Schools, Ota</h1>
             <p class="tagline">Stand Out and Lead</p>
         </div>
@@ -618,4 +618,5 @@
         }
     </script>
 </body>
+
 </html>
