--- a/exam.html
+++ b/exam.html
@@ -941,13 +941,13 @@
     <script>
         // Firebase configuration
         const firebaseConfig = {
-            apiKey: "AIzaSyDuKgSUZejLLveOe8oXlHo64OnCDFvwPc4",
-            authDomain: "climax-brains-academy-cbt.firebaseapp.com",
-            projectId: "climax-brains-academy-cbt",
-            storageBucket: "climax-brains-academy-cbt.appspot.com",
-            messagingSenderId: "1024257040553",
-            appId: "1:1024257040553:web:3cc25d238fa378358f09b8",
-            measurementId: "G-LVDHYESXJG"
+  apiKey: "AIzaSyCLARJE_z6pdpEoMMt2f9JcSvZAmxOwwMM",
+  authDomain: "climaxmodels-cbtportal.firebaseapp.com",
+  projectId: "climaxmodels-cbtportal",
+  storageBucket: "climaxmodels-cbtportal.firebasestorage.app",
+  messagingSenderId: "876108384334",
+  appId: "1:876108384334:web:263d99ac82bbb350921b1f",
+  measurementId: "G-FLQLQPKMMF"
         };
 
         // Initialize Firebase
@@ -1634,4 +1634,5 @@
         }
     </script>
 </body>
+
 </html>
