--- a/exam.html
+++ b/exam.html
@@ -785,7 +785,7 @@
             <i class="fas fa-arrow-left"></i> Back to Home
         </a>
         <div class="logo-container">
-            <img src="school-logo.png" alt="The Climax Model Schools Logo" class="logo">
+            <img src="school-logo.jpg" alt="The Climax Model Schools Logo" class="logo">
             <div class="school-info">
                 <h1>The Climax Model Schools, Ota</h1>
                 <h2>Examination Portal</h2>
@@ -1636,3 +1636,4 @@
 </body>
 
 </html>
+
