--- a/practice.html
+++ b/practice.html
@@ -869,7 +869,7 @@
     </div>
 
     <footer class="footer">
-        <p>The Climax Model Schools, Ota - Excellence in Education Since 1995</p>
+        <p>The Climax Model Schools, Ota - Excellence in Education </p>
         <p>© 2025 All Rights Reserved | Powered by <a href="https://digskills.netlify.app" target="_blank">DigSkills</a></p>
     </footer>
 
@@ -1530,4 +1530,5 @@
     }
 </script>
 </body>
+
 </html>
