--- a/exam.html
+++ b/exam.html
@@ -833,6 +833,7 @@
                         <option value="1st">1st Term</option>
                         <option value="2nd">2nd Term</option>
                         <option value="3rd">3rd Term</option>
+                        <option value="summer">Summer</option>
                     </select>
                 </div>
                 
@@ -1636,4 +1637,5 @@
 </body>
 
 </html>
+
 
