--- a/admin.html
+++ b/admin.html
@@ -595,13 +595,13 @@ const PASSWORD = "climax2025"; // change as needed
 })();
 // Firebase Configuration
 const firebaseConfig = {
-  apiKey: "AIzaSyDuKgSUZejLLveOe8oXlHo64OnCDFvwPc4",
-  authDomain: "climax-brains-academy-cbt.firebaseapp.com",
-  projectId: "climax-brains-academy-cbt",
-  storageBucket: "climax-brains-academy-cbt.firebasestorage.app",
-  messagingSenderId: "1024257040553",
-  appId: "1:1024257040553:web:3cc25d238fa378358f09b8",
-  measurementId: "G-LVDHYESXJG"
+  apiKey: "AIzaSyCLARJE_z6pdpEoMMt2f9JcSvZAmxOwwMM",
+  authDomain: "climaxmodels-cbtportal.firebaseapp.com",
+  projectId: "climaxmodels-cbtportal",
+  storageBucket: "climaxmodels-cbtportal.firebasestorage.app",
+  messagingSenderId: "876108384334",
+  appId: "1:876108384334:web:263d99ac82bbb350921b1f",
+  measurementId: "G-FLQLQPKMMF"
 };
 
 // Initialize Firebase
@@ -1594,4 +1594,5 @@ function viewResultDetails(id){
     </script>
 </body>
 </html>
+
 
