--- a/admin.html
+++ b/admin.html
@@ -374,10 +374,9 @@
                                     <label class="form-label">Session</label>
                                     <select class="form-select" id="reportSession">
                                         <option value="">Select Session</option>
-                                        <option value="2022/2023">2022/2023</option>
-                                        <option value="2023/2024">2023/2024</option>
-                                        <option value="2024/2025">2024/2025</option>
-                                        <option value="2025/2026">2025/2026</option>
+                                        <option value="2024_2025">2024/2025</option>
+                                        <option value="2025_2026">2025/2026</option>
+                                        <option value="2026_2027">2026/2027</option>
                                     </select>
                                 </div>
                             </div>
@@ -1770,3 +1769,4 @@ const firebaseConfig = {
     </script>
 </body>
 </html>
+
